# visualization

./: .gitignore  311_Excel_viz.xlsx  Assignment_1_2.ipynb  Class_1.ipynb  DataViz_class1_Apichat_Photi-A.Rmd  Pivot_ward_requests.xlsx  README.md  SETUP.md  assignment_2.md  assignment_3.md  oct_21_2025.ipynb  oct_23_2025.ipynb  pyproject.toml  session-2.ipynb  session-20250304.ipynb  session-20250305.ipynb  ward_requests.xlsx
01-slides/: DSI_DataViz_6_SubplotsAndCombiningViz.pptx
02-assignments/: assignment_2.md  assignment_3.md  assignment_4.md
02_activities/assignments/: Assigment_3.ipynb  (+72 more)
02_assignments/: assignment_1.md  assignment_2.md  assignment_3.md  assignment_4.md
03-instructors/: 01_course_intro.md  04_choosing_the_right_visualization.md  05_customizing_our_plots.md  06_subplots_and_combining_viz.md  07_accessible_data_visualization.md  08_data_viz_as_advocacy.md  README.md  generate_slides.sh
03_instructional_team/: README.md  generate_slides.sh
03_instructors/: 01_course_intro.md  02_getting_started_matplotlib.md  03_reproducible.md  04_choosing_the_right_visualization.md  05_customizing_our_plots.md  07_accessible_data_visualization.md  08_data_viz_as_advocacy.md  09_beyond_matplotlib.md  README.md  snake_case_replacer.sh
R Markdown code_AP/: DataViz_class2_Apichat_Photi-A.Rmd  DataViz_class3_Apichat_Photi-A.Rmd  ReadME
lessons/: DSI_DataViz_2_GettingStartedMatPlotLib.pptx  DSI_DataViz_5_ChoosingTheRightVisualization.pptx  DSI_DataViz_5_CustomizingOurPlots.pptx  DSI_DataViz_9_BeyondMatPlotLib.pptx
participation/: lesson1.ipynb  lesson2.ipynb
(+77 files in other folders)
