[project]
name = "visualization-env"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "matplotlib-venn>=1.1.2",
    "nbformat>=5.10.4",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "plotly>=6.5.2",
    "requests>=2.32.5",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "wordcloud>=1.9.5",
]
